--- a/study_smart/templates/about.html
+++ b/study_smart/templates/about.html
@@ -45,7 +45,7 @@
             <h1>Contact Us</h1>
             <div class="content">
                 <p>Got a question, idea, or want to send feedback? I’d love to hear from you. Reach out anytime through Instagram at
-                  <p id="insta">@ADD/MAKE INSTAGRAM</p> 
+                  <p id="insta">@study.smartapp</p> 
                   or shoot an email to 
                   <p id="email">studysmartapp.contact@gmail.com</p>
                   This app is built for students like you, so your feedback and suggestions mean a lot!
