--- a/study_smart/templates/about.html
+++ b/study_smart/templates/about.html
@@ -10,6 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Anta&family=Montserrat:ital,wght@0,500;1,500&family=Oxanium:wght@700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-70PGMN115F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-70PGMN115F');
+</script>
 <body>
     <nav class="navbar">
         <div class="logo">
