--- a/study_smart/templates/dashboard.html
+++ b/study_smart/templates/dashboard.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="static/dashboard.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-70PGMN115F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-70PGMN115F');
+</script>
 <body>
     <nav class="navbar">
     <div class="logo">
